option java_outer_classname="ContainsCommandProtocol";

package Alachisoft.NCache.Common.Protobuf;
message ContainsCommand {
	optional string key = 1;
	optional int64 requestId = 2;
}